# xam

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
examgen/: __init__.py  app.py  auth.py  blog.py  test.db
examgen/templates/: base.html  index.html  update.html
src/: manage.py
src/courses/: forms.py  models.py  urls.py  views.py
src/courses/migrations/: 0001_initial.py
src/courses/templates/: courses.html
src/courses/templates/courses/: create.html  delete.html  detail.html
src/templates/: base.html
src/xam/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
