[tool.poetry]
name = "examgen"
version = "0.1.0"
description = "Ready-to-deploy website for generating exams for students."
authors = ["Jason Villanueva <a@jsonvillanueva.com>"]
license="MIT"
readme="README.md"
repository="https://github.com/jsonvillanueva/"
classifiers= [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Natural Language :: English",
    ]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1"
flask-sqlalchemy = "^2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
isort = "^5.8"
pre-commit = "^2.11.1"
pytest = "^5.2"

[tool.poetry.plugins."console_scripts"]
"myapp" = "myapp.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
